--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Kiko Now
+name:thd2's blog
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: coding study
 
 #
 # Flags below are optional
