--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ navigation:
     url: /archive
   - name: Tags
     url: /tags
-  - name: Theme
-    url: https://github.com/AWEEKJ/kiko-now
+  #- name: Theme
+  # url: https://thd2.github.io
 
 # Pagination
 paginate: 5
