--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name:thd2's blog
+name: thd2's blog
 
 # Short bio or description (displayed in the header)
 description: coding study
@@ -28,8 +28,8 @@ navigation:
     url: /archive
   - name: Tags
     url: /tags
-  #- name: Theme
-  # url: https://thd2.github.io
+  - name: Theme
+    url: https://thd2.github.io
 
 # Pagination
 paginate: 5
